Avoid an empty left filter panel on search page, if there is no search hit and no filter applied

--- a/src/Smartstore.Web/Views/Search/Search.cshtml
+++ b/src/Smartstore.Web/Views/Search/Search.cshtml
@@ -61,7 +61,7 @@
             </div>
         }
 
-        <p sm-if="suggestions.Any()" class="search-suggestions">
+        <p sm-if="suggestions.Length > 0" class="search-suggestions">
             <strong>@(T(encodedAttemptedTerm.HasValue() || Model.TotalProductsCount == 0 ? "Search.DidYouMean" : "Search.RelatedSearchTerms")):</strong>
             @{
                 var links = string.Join(", ", suggestions.Select(x => "<a href='" + Url.RouteUrl("Search", new { q = x }) + $"'>{x}</a>"));
