--- a/tools/Smartstore.IconGenerator/styles.css
+++ b/tools/Smartstore.IconGenerator/styles.css
@@ -1,38 +1,110 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+:root {
+    --color: #393f46;
+    --box-bg: #e9ecef;
+    --box-hover-color: #0a58ca;
+    --box-hover-bg: #dee2e6;
+    --box-active-bg: #d7ecfa;
+    --box-active-outline-bg: #37a0e6;
+    scroll-behavior: smooth;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-	font-family:Tahoma;
+    overflow-x: hidden;
+    margin: 0;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 1rem;
+    line-height: 1.4;
+    color: var(--color);
+}
+
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: inherit;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    appearance: none;
+    border-radius: .375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+#iconContainer {
+    display: grid;
+    padding: 1rem;
+    grid-gap: 0;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fill, 160px);
+    grid-auto-rows: minmax(var(--m-row-height), max-content);
+    gap: 1.5rem 1rem;
 }
 
 #controls {
-	position: sticky;
-	display: flex;
-	justify-content: end;
-	align-items: start;
-	gap: 1rem;
-	top: 0;
-	left: 0;
-	padding: 0.4rem;
-	background-color: white;
-	z-index: 1;
+    position: sticky;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 0.75rem 1rem;
+    gap: 1rem;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.05);
+    z-index: 1;
 }
+
+.filter {
+    margin-left: auto;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    gap: .5rem;
+}
+
 #controls label {
 	user-select: none;
 }
-#controls .spacer {
-	display: inline-block;
-	flex-grow: 1;
-}
-#controls .files {
+
+.files {
 	display: flex;
-	align-items: start;
+	align-items: center;
+    gap: 0.5rem;
+}
+.file {
+    width: 250px;
+}
+.file > label {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+}
+.file-input {
+    display: block;
+    width: 100%;
 }
 
 .icon {
 	position: relative;
-	display: inline-flex;
-	flex-direction: column;
 	align-items: center;
-	width: 6rem;
-	margin: 0.2rem;
 	text-align: center;
 	user-select: none;
 }
@@ -56,37 +128,30 @@ body {
 	background-color: green;
 }
 .icon span {
-	font-size: 0.8em;
-	color: gray;
+	font-size: 0.875em;
 }
 
-.icon .symbol {
+.symbol {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 4rem;
-	height: 4rem;
-	padding: 0.7rem;
-	margin: 0.3rem;
+	padding: 1.5rem 1rem;
+	margin-bottom: 0.5rem;
 	border-radius: 0.5rem;
-	background-color: #00000007;
+	background-color: var(--box-bg);
 }
-.icon .symbol:hover {
-	background-color: #00000020 !important;
-	cursor: pointer;
+.symbol:hover {
+    background-color: var(--box-hover-bg);
+    color: var(--box-hover-color);
+    cursor: pointer;
 }
-.icon .symbol svg {
-	width: 2rem;
-	height: 3rem;
+.symbol svg {
+	width: 32px;
+	height: auto;
 }
 .icon.selected .symbol {
-	margin: 0.1rem;
-	background: linear-gradient(to bottom right, transparent 0%, transparent 79%, currentColor 80%);
-	border: 0.2rem solid #0002;
-	color: gold;
-}
-.icon.selected .symbol svg{
-	color: #dba700;
+    outline: 2px solid var(--box-active-outline-bg);
+    background-color: var(--box-active-bg);
 }
 
 #dialogBox.hidden {
@@ -98,19 +163,19 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0,0,0, .5);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
 }
 .dialog-box {
-  background-color: white;
+  background-color: #fff;
   border-radius: 8px;
   padding: 20px;
   width: 300px;
   text-align: center;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 15px rgba(0,0,0, .3);
 }
 .dialog-box span {
   display: block;
@@ -133,31 +198,35 @@ body {
 }
 
 /* CallToAction Button */
-.cta-btn {
-  display: inline-block;
-  padding: 0.5rem;
-  background-color: #007bff;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  border: none;
-  cursor: pointer;
+.btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color: #0d6efd;
+    color: white;
+    text-decoration: none;
+    font-size: inherit;
+    font-weight: 400;
+    border-radius: 6px;
+    transition: background-color 0.12s ease, box-shadow 0.12s ease;
+    border: none;
+    cursor: pointer;
 }
-.cta-btn.secondary {
+.btn.secondary {
 	background-color: green;
 }
-.cta-btn:hover {
-  background-color: #0056b3;
-  box-shadow: 0 6px 14px rgba(0, 123, 255, 0.3);
+    .btn:hover {
+        background-color: #0b5ed7;
+    }
+    .btn:active {
+        background-color: #0a58ca;
+        box-shadow: inset 0 3px 5px rgba(0,0,0, 0.2);
+    }
+.btn:focus {
+    outline: none;
 }
-.cta-btn:focus {
-  outline: none;
-  box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
-}
-.cta-btn:disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
-  box-shadow: none;
+.btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    pointer-events: none;
+    box-shadow: none;
 }
