AI: Minor renaming

--- a/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
@@ -176,7 +176,7 @@
                                       entity-name="@Model.Name"
                                       entity-type="Category"
                                       display-image-options="false"
-                                      display-structure-options="false">
+                                      display-layout-options="false">
                             <editor asp-for="Description" />
                         </ai-rich-text>
                         <span asp-validation-for="Description"></span>
@@ -191,7 +191,7 @@
                                       entity-name="@Model.Name"
                                       entity-type="Category"
                                       entity-id="@Model.Id"
-                                      display-structure-options="false"
+                                      display-layout-options="false"
                                       display-image-options="false">
                             <editor asp-for="BottomDescription" />
                         </ai-rich-text>
