--- a/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Topic/_CreateOrUpdate.cshtml
@@ -287,7 +287,7 @@
                         <ai-rich-text asp-for="Body"
                                       entity-name="@Model.Title"
                                       entity-type="Topic"
-                                      display-additional-content-options="true"
+                                      display-toc-options="true"
                                       display-link-options="true">
                             <editor asp-for="Body" />
                         </ai-rich-text>
