--- a/src/Smartstore.Web/wwwroot/skinning/_pnotify.scss
+++ b/src/Smartstore.Web/wwwroot/skinning/_pnotify.scss
@@ -11,6 +11,7 @@
     box-shadow: 0 6px 12px rgba($black, 0.175) !important;
     border-width: 1px;
     min-height: 75px !important;
+    max-height: 90dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
