Client notifier fixes & enhancements

--- a/src/Smartstore.Web/wwwroot/skinning/_pnotify.scss
+++ b/src/Smartstore.Web/wwwroot/skinning/_pnotify.scss
@@ -54,6 +54,11 @@
 }
 
 .ui-pnotify-text {
+    --overflow-x: auto !important;
+    @extend .custom-scrollbar;
+}
+
+.ui-pnotify-text {
     font-size: $font-size-lg;
     max-height: 300px;
     overflow-y: auto;
