MinifyTagHelper: minifies inline scripts via sm-minify attribute. Opt-in, default is false.

--- a/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Info.cshtml
@@ -417,7 +417,7 @@
     </div>
 </div>
 
-<script sm-target-zone="scripts" data-origin="order-edit-info">
+<script sm-target-zone="scripts" sm-minify="true" data-origin="order-edit-info">
     $(function () {
         $('#btnRefreshPage').on('click', function () {
             location.reload();
