--- a/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Order/_Edit.Info.cshtml
@@ -77,8 +77,15 @@
             <smart-label asp-for="CustomerId" />
         </div>
         <div class="adminData">
-            <div class="form-control-plaintext">
-                <a asp-action="Edit" asp-controller="Customer" asp-route-id="@Model.CustomerId">@Model.CustomerName</a>
+            <div class="form-control-plaintext" attr-class='(Model.CustomerDeleted, "text-muted")'>
+                @if (!Model.CustomerDeleted)
+                {
+                    <a asp-action="Edit" asp-controller="Customer" asp-route-id="@Model.CustomerId">@Model.CustomerName</a>
+                }
+                else
+                {
+                    @Model.CustomerName
+                }
             </div>
         </div>
     </div>
