Sliding dropdown groups

--- a/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
@@ -158,7 +158,8 @@
     }
 }
 
-.navbar.navbar-slide .dropdown-menu {
+.navbar.navbar-slide .dropdown-menu,
+.dropdown-menu-slide {
 	@include sliding-dropdown-menu();
 }
 
