--- a/src/Smartstore.Web/wwwroot/shared/_utils.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_utils.scss
@@ -262,7 +262,7 @@ table th {
 // ------------------------------------------------------
 
 .hide {
-	display: none;
+	display: none !important;
 }
 
 .muted {
