--- a/src/Smartstore.Web/Views/Home/Index.cshtml
+++ b/src/Smartstore.Web/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     Assets.AppendTitleParts((string)ViewBag.MetaTitle);
     Assets.AppendMetaDescriptionParts((string)ViewBag.MetaDescription);
     Assets.AppendMetaKeywordsParts((string)ViewBag.MetaKeywords);
+
+    //var yo = Enumerable.Empty<string>() ?? [];
 }
 
 <div class="page home-page">
