--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -404,15 +404,7 @@ body {
 
     .dropdown-item {
         font-weight: $font-weight-medium;
-
-        > i,
-        > svg,
-        > img {
-            margin-inline-start: -0.375rem;
-            margin-inline-end: 0.75rem;
-            display: inline-block;
-            font-size: inherit;
-        }
+        gap: 1rem;
     }
 
     .dropdown-header {
